[project]
name = "nrse2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Rantaharju Jarno",email = "jarno.rantaharju@aalto.fi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.4.1,<8.0.0)",
    "kaleido (==v0.2.1)",
    "niimpy (>=1.3.0,<2.0.0)",
    "folium (>=0.19.5,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
